--- a/miao/test.html
+++ b/miao/test.html
@@ -8,14 +8,37 @@
 
 </script>
 此处存疑 提交未通过 -->
-<script id="ch0104/05">
-    var x=Number(prompt())
-    var y=Number(prompt())
-    if(x>y){
-        alert(">")
-    }else if(x===y){
-        alert("=")
-    }else if(x<y){
-        alert("<")
+<!-- <script id="ch0104/09">
+    var n = Number(prompt())
+    var x
+    var y
+    n = parseInt(n)
+    if (n % 3 === 0 && n % 5 === 0 && n % 7 === 0) {
+        alert(3 + " " + 5 + " " + 7)
+    } else if ((n % 3 === 0 || n % 5 === 0 || n % 7 === 0) && (n % 5 === 0 || n % 7 === 0)) {
+        if (n % 3 === 0) {
+            x = 3
+            if (n % 5 === 0) {
+                y = 5
+            } else {
+                y = 7
+            }
+        }
+        else if (n % 5 === 0 && n % 7 === 0) {
+            x = 5
+            y = 7
+            alert(x + "," + y)
+        }
+
+    } else if (n % 3 === 0 || n % 5 === 0 || n % 7 === 0) {
+        alert(n)
     }
+</script> -->
+
+<script id="ch0104/21">
+    var n = parseInt(prompt())
+    var x = parseInt(prompt())
+    var y = parseInt(prompt())
+    n = n - y / x
+    alert(parseInt(n))
 </script>
