--- a/miao/test.html
+++ b/miao/test.html
@@ -35,10 +35,15 @@
     }
 </script> -->
 
-<script id="ch0104/21">
-    var n = parseInt(prompt())
-    var x = parseInt(prompt())
-    var y = parseInt(prompt())
-    n = n - y / x
-    alert(parseInt(n))
+<script id="ch0104/15">
+    var x = Number(prompt())
+    var y = Number(prompt())
+    var z = Number(prompt())
+    if (x > y && x > z) {
+        alert(x)
+    } else if (y > x && y > z) {
+        alert(y)
+    } else if (z > x && z > y) {
+        alert(z)
+    }
 </script>
