--- a/miao/test.html
+++ b/miao/test.html
@@ -35,24 +35,22 @@
     }
 </script> -->
 
-<script id="ch0104/11">
-    var date = parseInt(Number(prompt()))
-    if (date >= 1 && date <= 7) {
-        switch (date) {
-            case 1:
-                alert("NO")
-                break;
-            case 3:
-                alert("NO")
-                break;
-            case 5:
-                alert("NO")
-                break;
-            default:
-                alert("YES")
-
-        }
-    }else{
-        alert("输入错误")
+<script id="ch0104/20">
+    var a = parseFloat(prompt())
+    var b = parseFloat(prompt())
+    var c = parseFloat(prompt())
+    var x1 = (-b + Math.sqrt(b * b - 4 * a * c)) / (2 * a), x2 = (-b - Math.sqrt(b * b - 4 * a * c)) / (2 * a)
+    var x1 = x1.toFixed(5), x2 = x2.toFixed(5)
+    var xs = -b / (2 * a)
+    var xx = Math.sqrt((4 * a * c - b * b)) / (2 * a)
+    var Xs = Number(xs).toFixed(5)
+    var Xx = Number(xx).toFixed(5)
+    if (b * b === 4 * a * c) {
+        alert("x1" + "=" + "x2" + x1.toFixed(5))
+    } else if (b * b > 4 * a * c) {
+        alert(("x1=" + x1.toFixed(5) + ";" + "x2=" + x2.toFixed(5) + ",其中x1>x2"))
+    } else if (b * b < 4 * a * c) {
+        alert("x1=" + xs.toFixed(5) + "+" + xx.toFixed(5) + "i;x2=" + xs.toFixed(5) + "-" + xx.toFixed(5) + "i")
     }
+
 </script>
