--- a/miao/noi.html
+++ b/miao/noi.html
@@ -480,7 +480,7 @@
         sum = sum + Balance
 
     }
-    alert((sum / 12).toFixed(2))
+    alert("$" + (sum / 12).toFixed(2))
 </script>
 
 <script id="ch0105/03">
@@ -506,17 +506,24 @@
     var n = parseInt(prompt("请输入一个整数"))
     var x;
     var sum = 0;
+    var state = true;
     if (n >= 1 && n <= 10000) {
         for (var i = 1; i <= n; i++) {
 
             x = parseFloat(prompt("请输入第" + i + "个整数的值"))
-            if (Math.abs(x) <= 1000) {
+            if (Math.abs(x) <= 10000) {
                 sum = sum + x
+            } else {
+                state = false
             }
 
-
         }
-        alert(sum + " " + ((sum / n).toFixed(4)))
+        if (state === true) {
+            alert(sum + " " + ((sum / n).toFixed(4)))
+        } else {
+            alert(state)
+        }
+
     }
 
 </script>
