--- a/miao/test.html
+++ b/miao/test.html
@@ -36,22 +36,13 @@
 </script> -->
 
 
-<script id="ch0105/05">
-
+<script id="ch0105/07">
     var n = parseInt(Number(prompt()))
-    var score = new Array(n)
-    var max = 0
-    if (n >= 1 && n < 100) {
-        for (var i = 0; i < score.length; i++) {
-            score[i] = [parseInt(Number(prompt()))]
-            if (score[i] >= 1 && score[i] <101) {
-                if (max < score[i]) {
-                    max = score[i]
-                }
-            } else {
-                alert("输入有误")
-            }
-        }
-        alert(max)
+    var angle
+    var nsum = (n - 2) * 180
+    for (var i = 0; i < n - 1; i++) {
+        angle = parseInt(Number(prompt()))
+        nsum=nsum-angle
     }
+    alert(nsum)
 </script>
