--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1835,6 +1835,17 @@
                         </li>
                     </ul>
                 </div>
+                <div id="content">
+                    <h2>内容</h2>
+                    <ul class="content-box">
+                        <li>
+                            <h3 class="title" style="color:#ffac13">图书</h3>
+                        </li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
             </div>
         </main>
     </div>
