--- a/miao/test.html
+++ b/miao/test.html
@@ -36,13 +36,17 @@
 </script> -->
 
 
-<script id="ch0105/07">
+<script id="ch0105/09">
     var n = parseInt(Number(prompt()))
-    var angle
-    var nsum = (n - 2) * 180
-    for (var i = 0; i < n - 1; i++) {
-        angle = parseInt(Number(prompt()))
-        nsum=nsum-angle
+    var m = parseInt(Number(prompt()))
+    if (n >= 0 && m >= 0 && n <= 300 & m <= 300) {
+        if (n % 2 != 0) {
+            for (n; n <= m; n++) {
+                n = n + 2
+            }
+            alert(n+m)
+        } else {
+
+        }
     }
-    alert(nsum)
 </script>
