--- a/miao/noi.html
+++ b/miao/noi.html
@@ -596,3 +596,15 @@
     }
     alert(nsum)
 </script>
+
+<script id="ch0105/09">
+    var n = parseInt(Number(prompt()))
+    var m = parseInt(Number(prompt()))
+    var sum = 0
+    for (n; n <= m; n++) {
+        if (n % 2 != 0) {
+            sum += n
+        }
+    }
+    alert(sum)
+</script>
