--- a/miao/noi.html
+++ b/miao/noi.html
@@ -608,3 +608,85 @@
     }
     alert(sum)
 </script>
+
+<script id="ch0105/10">
+    var n = parseInt(Number(prompt()))
+    var m = parseInt(Number(prompt()))
+    var sum = 0
+    if (n > 0 && n < 100 && m > 0 && m < 100) {
+        for (n; n <= m; n++) {
+            if (n % 17 === 0) {
+                sum += n
+            }
+        }
+        alert(sum)
+    }
+</script>
+
+<script id="ch0105/11">
+    var k = parseInt(Number(prompt()))
+    var o = 0, f = 0, t = 0
+    if (k > 1 && k < 100) {
+        for (var i = 0; i < k; i++) {
+            var m = parseInt(Number(prompt()))
+            if (m % 10 === 1) {
+                o += 1
+            } else if (m % 10 === 5) {
+                f += 1
+            } else if (m % 10 === 0) {
+                t += 1
+            }
+        }
+        alert(o + "\n" + f + "\n" + t)
+    }
+
+</script>
+
+<script id="ch0105/12">
+    var n = parseInt(Number(prompt()))
+
+    var m = parseInt(Number(prompt()))
+    var sum = 0, num = 0
+    for (var i = 0; i < n; i++) {
+        num = parseInt(Number(prompt()))
+        if (num === m) {
+            sum += 1
+        }
+    }
+    alert(sum)
+</script>
+
+<script id="ch0105/13">
+    var a = parseInt(Number(prompt()))
+    var n = parseInt(Number(prompt()))
+
+
+    var num = 0
+    if (a >= -1000000 && a <= 1000000 && n >= 1 && n <= 10000) {
+        // num = Math.pow(a, n)
+        // alert(num)
+        for (var i = 1; i < n; i++) {
+            num += a * a
+        }
+    }
+    alert(num)
+</script>
+
+<script id="ch0105/14">
+    var x = parseInt(Number(prompt()))
+    var n = parseInt(Number(prompt()))
+    for (var i = 0; i < n; i++) {
+        x += (x * 0.001)
+    }
+    alert(x.toFixed(4))
+</script>
+
+<script id="ch0105/15">
+    var R = parseInt(Number(prompt()))
+    var M = parseInt(Number(prompt()))
+    var Y = parseInt(Number(prompt()))
+    for (var i = 0; i < Y; i++) {
+        M += (M * (R / 100))
+    }
+    alert(parseInt(M))
+</script>
