--- a/miao/test.html
+++ b/miao/test.html
@@ -56,12 +56,29 @@
     alert(max - min)
 </script> -->
 
-<script id="ch0105/15">
-    var R = parseInt(Number(prompt()))
-    var M = parseInt(Number(prompt()))
-    var Y = parseInt(Number(prompt()))
-    for(var i=0;i<Y;i++){
-        M+=(M*(R/100))
+<script id="ch0105/16">
+    var N = parseInt(Number(prompt()))
+    var K = parseInt(Number(prompt()))
+    var moeny = 0
+    var M = 0
+    var add = 0
+    var sum = 0
+    for (M; M < 999; M++) {
+
+        add = Number(1 + (K / 100 * M))
+
+        if ((M * N - 200 * add) > 0) {
+            M += 1
+            if (M <= 20) {
+                alert(M)
+                break;
+            } else {
+                alert("Impossible")
+                break;
+            }
+
+        } else {
+            alert("Impossible")
+        }
     }
-    alert(parseInt(M))
 </script>
