--- a/miao/noi.html
+++ b/miao/noi.html
@@ -728,9 +728,47 @@
     var kvalue = fibonacci(k)
     alert(kvalue)
 </script>
+<script id="ch0105/41">
+    var l = parseInt(Number(prompt()))
+    var r = parseInt(Number(prompt()))
+    var sum = 0
+    for (l; l <= r; l++) {
+        if (l > 19 && l < 30) {
+
+            if (l === 22) {
+                sum += 2
+            } else {
+                sum += 1
+            }
+
+        } else if (l % 2 === 0) {
+            if (l % 10 === 2) {
+                sum += 1
+
+            }
+        }
+
+
+    }
+    alert(sum)
+</script>
+
+<script id="ch0105/42">
+    var a = parseInt(Number(prompt()))
+    var b = parseInt(Number(prompt()))
+    var c = String(prompt())
+    var d = parseInt(Number(prompt()))
+    if (a > 3 && a <= 10 && b > 5 && b <= 10) {
+        if (d === 1 || d === 0) {
+            for (var i = 0; i < a; i++) {
+                console.log("" + c + "")
+            }
+        }
+    }
+</script>
 <script id="ch0105/43">
     var n = parseInt(Number(prompt()))
-     
+
 </script>
 
 <script id="ch0105/44">
