--- a/miao/test.html
+++ b/miao/test.html
@@ -102,18 +102,27 @@
     }
 </script> -->
 
-<script id="ch0105/44">
-    var Num = parseInt(Number(prompt()))
-    var nvalue = 1
-    for (var i = 1; i < Num; i++) {
-        nvalue += 2
-        if (nvalue > 7) {
-            if (nvalue % 3 === 0 || nvalue % 5 === 0 || nvalue % 7 === 0) {
-                i--
+<script id="ch0105/41">
+    var l = parseInt(Number(prompt()))
+    var r = parseInt(Number(prompt()))
+    var sum = 0
+    for (l; l <= r; l++) {
+        if (l > 19 && l < 30) {
+
+            if (l === 22) {
+                sum += 2
+            } else {
+                sum += 1
+            }
+
+        } else if (l % 2 === 0) {
+            if (l % 10 === 2) {
+                sum += 1
+
             }
         }
 
-    }
 
-    alert(nvalue)
+    }
+    alert(sum)
 </script>
