--- a/miao/noi.html
+++ b/miao/noi.html
@@ -728,6 +728,174 @@
     var kvalue = fibonacci(k)
     alert(kvalue)
 </script>
+
+<script id="ch0105/18">
+    var n = parseInt(Number(prompt()))
+    var a, b, c, d
+    a = parseInt(Number(prompt()))
+    b = parseInt(Number(prompt()))
+    var x = b / a
+    for (var i = 1; i < n; i++) {
+        c = parseInt(Number(prompt()))
+        d = parseInt(Number(prompt()))
+        y = d / c
+        if (y - x > 0.05) {
+            alert("better")
+        } else if (x - y > 0.05) {
+            alert("worse")
+        } else {
+            alert("same")
+        }
+    }
+
+</script>
+
+
+<script id="ch0105/19">
+    var n = parseInt(Number(prompt()))
+    var x, y
+    var people
+    var s = 0
+    var time
+    for (var i = 0; i < n; i++) {
+        x = parseInt(Number(prompt()))
+        y = parseInt(Number(prompt()))
+        people = parseInt(Number(prompt()))
+        s = Math.sqrt((0 - x) * (0 - x) + (0 - y) * (0 - y))
+        time = (2 * s / 50) + people + 0.5 * people
+
+    }
+    alert(Math.ceil(time))
+</script>
+
+<script id="ch0105/20">
+    var h = parseInt(Number(prompt()))
+    var sum = h
+    for (var i = 1; i < 10; i++) {
+
+        h /= 2
+        sum = sum + h * 2
+    }
+    alert(sum.toFixed(4))
+    alert((h / 2).toFixed(7))
+</script>
+
+<script id="ch0105/21">
+    var N = parseInt(Number(prompt()))
+    if (N > 0 && N <= 2000000) {
+        for (; ;) {
+            if (N % 2 === 0) {
+                N = N / 2
+                break;
+            } else {
+                N = N * 3 + 1
+                break;
+            }
+            alert(N)
+        }
+
+    }
+</script>
+
+<script id="ch0105/21">
+    var N = parseInt(Number(prompt()))
+    var m = N
+    if (N > 1 && N <= 2000000) {
+        for (var i = 1; i <= m; i++) {
+            if (N % 2 === 0) {
+                console.log(N + "/2=" + N / 2)
+                N = N / 2
+                if (N === 1) {
+                    console.log("End")
+                }
+            } else if (N % 2 != 0) {
+
+                console.log(N + "*3+" + "1=" + parseInt(N * 3 + 1))
+                N = N * 3 + 1
+            }
+
+        }
+
+    } else if (N === 1) {
+        console.log("End")
+    } 
+</script>
+
+<script id="ch0105/22">
+    var month$ = 0
+    var money = 300
+    var $ = 0
+    var save$ = 0
+    var x = 0
+    for (var i = 1; i <= 12; i++) {
+        month$ = Number(prompt())
+        $ = money - month$ + $
+        if ($ > 100) {
+            $ = $ - 100
+            save$ = save$ + 1
+
+        } else if ($ < 0) {
+            x = i
+        }
+    }
+    if (x > 0) {
+        alert(-x)
+
+    }
+
+</script>
+
+<script id="ch0105/23">
+    var m = Number(prompt())
+    var n = Number(prompt())
+    var sum = 0, people = 0
+    for (var i = 0; i < n; i++) {
+        sum = Number(prompt())
+
+        if (m - sum < 0) {
+            people += 1
+        } else {
+            m = m - sum
+        }
+    }
+    alert(people)
+</script>
+
+<script id="ch0105/24">
+    var n = Number(prompt())
+    var sum = 0
+    for (var i = 0; i < n; i++) {
+        var miny = Number(prompt())
+        var maxy = Number(prompt())
+        if (miny >= 90 && miny <= 140 && maxy >= 60 && maxy <= 90) {
+            sum += 1
+        } else {
+            sum -= 1
+            if (sum < 0) {
+                sum = 0
+            }
+        }
+    }
+    alert(sum)
+</script>
+
+<script id="ch0105/26">
+    var n = Number(prompt())
+    var sum = 0
+    for (var i = 0; i < n; i++) {
+        var miny = Number(prompt())
+        var maxy = Number(prompt())
+        if (miny >= 90 && miny <= 140 && maxy >= 60 && maxy <= 90) {
+            sum += 1
+        } else {
+            sum -= 1
+            if (sum < 0) {
+                sum = 0
+            }
+        }
+    }
+    alert(sum)
+</script>
 <script id="ch0105/41">
     var l = parseInt(Number(prompt()))
     var r = parseInt(Number(prompt()))
