--- a/miao/test.html
+++ b/miao/test.html
@@ -102,27 +102,21 @@
     }
 </script> -->
 
-<script id="ch0105/41">
-    var l = parseInt(Number(prompt()))
-    var r = parseInt(Number(prompt()))
-    var sum = 0
-    for (l; l <= r; l++) {
-        if (l > 19 && l < 30) {
 
-            if (l === 22) {
-                sum += 2
-            } else {
-                sum += 1
-            }
-
-        } else if (l % 2 === 0) {
-            if (l % 10 === 2) {
-                sum += 1
-
+<script id="ch0105/24">
+    var n = Number(prompt())
+    var sum=0
+    for(var i=0;i<n;i++){
+        var miny= Number(prompt())
+        var maxy= Number(prompt())
+        if(miny>=90&&miny<=140&&maxy>=60&&maxy<=90){
+            sum+=1
+        }else{
+            sum-=1
+            if(sum<0){
+                sum=0
             }
         }
-
-
     }
     alert(sum)
 </script>
