--- a/miao/noi.html
+++ b/miao/noi.html
@@ -881,20 +881,7 @@
 
 <script id="ch0105/26">
     var n = Number(prompt())
-    var sum = 0
-    for (var i = 0; i < n; i++) {
-        var miny = Number(prompt())
-        var maxy = Number(prompt())
-        if (miny >= 90 && miny <= 140 && maxy >= 60 && maxy <= 90) {
-            sum += 1
-        } else {
-            sum -= 1
-            if (sum < 0) {
-                sum = 0
-            }
-        }
-    }
-    alert(sum)
+
 </script>
 <script id="ch0105/41">
     var l = parseInt(Number(prompt()))
@@ -960,4 +947,34 @@
     for (var i = 0; i <= Day; i++) {
         alert(i)
     }
+</script>
+
+<script id="7">
+    var x = parseInt(Number(prompt()))
+    if (x % 7 === 0) {
+        alert("Yes")
+    } else if (x % 10 === 7 || x % 100 === 7 || x % 1000 === 7) {
+        alert("Yes")
+    } else {
+        alert("No")
+    }
+</script>
+
+<script id="sort">
+    var a = 0, b = 0, c = 0, max = 0, min = 0
+    a = parseInt(Number(prompt()))
+    b = parseInt(Number(prompt()))
+    c = parseInt(Number(prompt()))
+    if (a > b && a > c) {
+        alert(a + "," + b + "," + c)
+    } else if (b > a && b > c) {
+        a = b
+        b = a
+        alert(a + "," + b + "," + c)
+    } else if (c > a && c > b) {
+        a = c
+        c = a
+        alert(a + "," + b + "," + c)
+    }
+
 </script>
