--- a/miao/test.html
+++ b/miao/test.html
@@ -103,21 +103,17 @@
 </script> -->
 
 
-<script id="sort">
-    var a = 0, b = 0, c = 0, max = 0, min = 0
-    a = parseInt(Number(prompt()))
-    b = parseInt(Number(prompt()))
-    c = parseInt(Number(prompt()))
-    if (a > b && a > c) {
-        alert(a + "," + b + "," + c)
-    } else if (b > a && b > c) {
-        a = b
-        b = a
-        alert(a + "," + b + "," + c)
-    } else if (c > a && c > b) {
-        a=c
-        c=a
-        alert(a + "," + b + "," + c)
-    }
 
+<!-- <script id="7">
+    var x = parseInt(Number(prompt()))
+    if (x % 7 === 0) {
+        alert("Yes")
+    } else if (x % 10 === 7 || x % 100 === 7 || x % 1000 === 7) {
+        alert("Yes")
+    } else {
+        alert("No")
+    }
+</script> -->
+<script id="palindrom">
+    var x=parseInt(Number(prompt()))
 </script>
