--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1025,3 +1025,21 @@
         }
     }
 </script>
+
+<script id="palindrom">
+    var x = (String(prompt()))
+    var arry = new Array(x.length)
+    for (var i = 0; i < x.length; i++) {
+        arry[i] = x.substr(i, 1)
+    }
+    for (var i = 0; i < (arry.length / 2); i++) {
+        if (parseInt(arry[i]) === parseInt(arry[arry.length - (i + 1)])) {
+            if (i = arry.length - 1) {
+                alert("YES")
+            }
+        } else {
+            alert("NO")
+            break
+        }
+    }
+</script>
