--- a/miao/test.html
+++ b/miao/test.html
@@ -115,5 +115,39 @@
     }
 </script> -->
 <script id="palindrom">
-    var x=parseInt(Number(prompt()))
+    var x = (String(prompt()))
+    var arry = new Array(x.length)
+    for (var i = 0; i < x.length; i++) {
+        arry[i] = x.substr(i, 1)
+    }
+            for (var i = 0; i < (arry.length / 2); i++) {
+            if (parseInt(arry[i]) === parseInt(arry[arry.length - (i + 1)])) {
+                if(i=arry.length-1){
+                    alert("YES")
+                }
+            } else {
+                alert("NO")
+                break
+            }
+        }
+    // if (arry.length % 2 !== 0) {
+    //     for (var i = 0; i < (arry.length / 2); i++) {
+    //         if (parseInt(arry[i]) === parseInt(arry[arry.length - (i + 1)])) {
+    //             alert("YES")
+    //         } else {
+    //             alert("NO")
+    //             break
+    //         }
+    //     }
+    // } 
+    // else {
+    //     for (var i = 0; i < (arry.length / 2); i++) {
+    //         if (parseInt(arry[i]) === parseInt(arry[arry.length - (i + 1)])) {
+    //             alert("YES")
+    //         } else {
+    //             alert("NO")
+    //             break
+    //         }
+    //     }
+    // }
 </script>
