--- a/miao/test.html
+++ b/miao/test.html
@@ -176,36 +176,23 @@
     alert(isPalindrome(121))
 
 </script> -->
-<script id="palindrom">
-        var isPalindrome = function (x) {
-            x = "" + x
-            var bool
-            var arry = new Array(x.length)
-            for (var a = 0; a < x.length; a++) {
-                arry[a] = x.substr(a, 1)
-            }
-            if (parseInt(arry.length) === 1) {
-                bool = true
-            } else {
-                var j = parseInt((arry.length / 2))
-                var front = 0
-                var behind = 0
-                for (var i = 0; i < j; i++) {
-                    front = parseInt(arry[i])
-                    behind = parseInt(arry[arry.length - (i + 1)])
-                    if (front === behind) {
-                        if (i === j - 1) {
-                            bool = "YES"
-                        }
-                    } else {
-                        bool = "NO"
-                        break
-                    }
-                }
-            }
-            return bool
-        }
-        var y=Number(prompt())
-        alert(isPalindrome(y))
-    
-    </script>
+<script id="weekday">
+    var y = 2019 % 100
+    var m = 2
+    var d = 1
+    var c = parseInt(y / 100)
+    if (m === 1) {
+        m = 13
+        y = y - 1
+    } else if (m === 2) {
+        m = 14
+        y = y - 1
+    }
+    var w = (y + parseInt(y / 4) + parseInt(c / 4) - 2 * c + parseInt(26 * (m + 1) / 10) + d - 1)
+    if (w < 1) {
+        w = (w % 7 + 7) % 7
+    } else {
+        w = w % 7
+    }
+    alert(w)
+</script>
