--- a/miao/test.html
+++ b/miao/test.html
@@ -10,14 +10,14 @@
 此处存疑 提交未通过 -->
 <!-- <script id="ch0104/09">
     var n = Number(prompt())
-    var x
+    var num
     var y
     n = parseInt(n)
     if (n % 3 === 0 && n % 5 === 0 && n % 7 === 0) {
         alert(3 + " " + 5 + " " + 7)
     } else if ((n % 3 === 0 || n % 5 === 0 || n % 7 === 0) && (n % 5 === 0 || n % 7 === 0)) {
         if (n % 3 === 0) {
-            x = 3
+            num= 3
             if (n % 5 === 0) {
                 y = 5
             } else {
@@ -25,9 +25,9 @@
             }
         }
         else if (n % 5 === 0 && n % 7 === 0) {
-            x = 5
+            num= 5
             y = 7
-            alert(x + "," + y)
+            alert(num+ "," + y)
         }
 
     } else if (n % 3 === 0 || n % 5 === 0 || n % 7 === 0) {
@@ -38,13 +38,13 @@
 
 
 <!-- <script id="ch0105/06">
-    var n, max, min = 0, Number
+    var n, manum, min = 0, Number
     n = parseInt(Number(prompt()))
     for (var i = 0; i < n; i++) {
         Num = parseInt(Number(prompt()))
         if (Num >= 0) {
             if (Num > min) {
-                max = Num
+                manum= Num
             } else if (Num <= min) {
                 min = Num
             }
@@ -53,7 +53,7 @@
         }
 
     }
-    alert(max - min)
+    alert(manum- min)
 </script> -->
 
 <!-- <script id="ch0105/16">
@@ -105,20 +105,20 @@
 
 
 <!-- <script id="7">
-    var x = parseInt(Number(prompt()))
-    if (x % 7 === 0) {
+    var num= parseInt(Number(prompt()))
+    if (num% 7 === 0) {
         alert("Yes")
-    } else if (x % 10 === 7 || x % 100 === 7 || x % 1000 === 7) {
+    } else if (num% 10 === 7 || num% 100 === 7 || num% 1000 === 7) {
         alert("Yes")
     } else {
         alert("No")
     }
 </script> -->
 <!-- <script id="palindrom">
-    var x = (String(prompt()))
-    var arry = new Array(x.length)
-    for (var i = 0; i < x.length; i++) {
-        arry[i] = x.substr(i, 1)
+    var num= (String(prompt()))
+    var arry = new Array(num.length)
+    for (var i = 0; i < num.length; i++) {
+        arry[i] = num.substr(i, 1)
     }
             for (var i = 0; i < (arry.length / 2); i++) {
             if (parseInt(arry[i]) === parseInt(arry[arry.length - (i + 1)])) {
@@ -153,11 +153,11 @@
 </script> -->
 
 <!-- <script id="palindrom">
-    var isPalindrome = function (x = 121) {
+    var isPalindrome = function (num= 121) {
         var bool
-        var arry = new Array(x.length)
-        for (var i = 0; i < x.length; i++) {
-            arry[i] = x.substr(i, 1)
+        var arry = new Array(num.length)
+        for (var i = 0; i < num.length; i++) {
+            arry[i] = num.substr(i, 1)
         }
         for (var i = 0; i < (arry.length / 2); i++) {
 
@@ -176,24 +176,30 @@
     alert(isPalindrome(121))
 
 </script> -->
-<script id="weekday">
-        var y = Number(prompt())
-        y = y % 100
-        var m = Number(prompt())
-        var d = 1
-        var c = parseInt(y / 100)
-        if (m === 1) {
-            m = 13
-            y = y - 1
-        } else if (m === 2) {
-            m = 14
-            y = y - 1
-        }
-        var w = (y + parseInt(y / 4) + parseInt(c / 4) - 2 * c + parseInt(26 * (m + 1) / 10) + d - 1)
-        if (w < 1) {
-            w = (w % 7 + 7) % 7
+<script id="complete-numbers">
+    var checkPerfectNumber = function (num) {
+        var y = 0
+        if (num <= 0) {
+            return false
         } else {
-            w = w % 7
+            for (var i = 1; i < num; i++) {
+                if (num % i === 0) {
+                    y += i
+                }
+
+            }
+            if (y === num) {
+                return num
+            } else {
+                return false
+            }
         }
-        alert(w)
-    </script>
+
+    };
+    for (var a = 1; a < 1000; a++) {
+        if (checkPerfectNumber(a) != false) {
+            alert(checkPerfectNumber(a))
+        }
+
+    }
+</script>
