--- a/miao/test.html
+++ b/miao/test.html
@@ -176,32 +176,21 @@
     alert(isPalindrome(121))
 
 </script> -->
-<script id="primes">
-    var isprime = function (x) {
-        if (x > 1) {
-            if (x === 2 || x === 3 || x === 5 || x === 7) {
+<script id="prime">
+    var x = Number(prompt())
+    if(x === 2 || x === 3 || x === 5 || x === 7) {
 
-                return x
+        alert("YES")
+    } else {
+        if (x % 2 > 0) {
+            if (x % 3 != 0 && x % 5 != 0 && x % 7 != 0) {
+                alert("YES")
             } else {
-                if (x % 2 > 0) {
-                    if (x % 3 != 0 && x % 5 != 0 && x % 7 != 0) {
-                        return x
-                    } else {
-                        return 0
-                    }
-                } else {
-                    return 0
-                }
+                alert("No")
             }
+        } else {
+            alert("No")
         }
-
-    };
-    for (var i = 1; i < 1000; i++) {
-        if (isprime(i) > 0) {
-            console.log(isprime(i))
-        }
-
     }
-
 
 </script>
