--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1163,9 +1163,11 @@
                     alert("No")
                 }
             } else {
-                alert("No")
+                alert("NO")
             }
         }
+    }else{
+        alert("NO")
     }
 
 
