--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1166,38 +1166,34 @@
                 alert("NO")
             }
         }
-    }else{
+    } else {
         alert("NO")
     }
 
 
 </script>
 <script id="primes">
-    var isprime = function (x) {
+    var x
+    for (x = 1; x < 1000; x++) {
         if (x > 1) {
             if (x === 2 || x === 3 || x === 5 || x === 7) {
 
-                return x
+                console.log(x)
             } else {
                 if (x % 2 > 0) {
                     if (x % 3 != 0 && x % 5 != 0 && x % 7 != 0) {
-                        return x
+                        console.log(x)
                     } else {
-                        return 0
+
                     }
                 } else {
-                    return 0
+
                 }
             }
         }
-
-    };
-    for (var i = 1; i < 1000; i++) {
-        if (isprime(i) > 0) {
-            console.log(isprime(i))
-        }
-
     }
+
+
 
 
 </script>
