--- a/miao/test.html
+++ b/miao/test.html
@@ -176,28 +176,10 @@
     alert(isPalindrome(121))
 
 </script> -->
-<script id="primes">
-    var x
-    for (x = 1; x < 1000; x++) {
-        if (x > 1) {
-            if (x === 2 || x === 3 || x === 5 || x === 7) {
-
-                console.log(x)
-            } else {
-                if (x % 2 > 0) {
-                    if (x % 3 != 0 && x % 5 != 0 && x % 7 != 0) {
-                        console.log(x)
-                    } else {
-
-                    }
-                } else {
-
-                }
-            }
-        }
-    }
-
-
+<script id="itob">
+    var x = Number(prompt())
+    x = "" + x
+    alert(x)
 
 
 </script>
