为什么不显示

--- a/miao/test.html
+++ b/miao/test.html
@@ -179,7 +179,11 @@
 <script id="itob">
     var x = Number(prompt())
     x = "" + x
-    alert(x)
+    console.log(x)
+</script>
 
+<script id="lcf&lcm">
+    var x = Number(prompt())
+    var y = Number(prompt())
 
 </script>
