--- a/miao/test.html
+++ b/miao/test.html
@@ -176,14 +176,25 @@
     alert(isPalindrome(121))
 
 </script> -->
-<script id="itob">
-    var x = Number(prompt())
-    x = "" + x
-    console.log(x)
-</script>
-
 <script id="lcf&lcm">
-    var x = Number(prompt())
-    var y = Number(prompt())
+    var a = Number(prompt())
+    var b = Number(prompt())
+    var lcf = 0, lcm = 0
+    var islcf = function (a, b) {
+        while (true) {
+            if ((a = a % b) === 0) {
+                lcf = b
+                break
+            }
+            if ((b = b % a) === 0) {
+                lcf = a
+                break
+            }
+        }
+        return lcf
+    }
 
+    lcm = (a * b) / islcf(a,b)
+    alert(islcf(a,b))
+    alert(lcm)
 </script>
