--- a/miao/test.html
+++ b/miao/test.html
@@ -176,25 +176,15 @@
     alert(isPalindrome(121))
 
 </script> -->
-<script id="lcf&lcm">
-    var a = Number(prompt())
-    var b = Number(prompt())
-    var lcf = 0, lcm = 0
-    var islcf = function (a, b) {
-        while (true) {
-            if ((a = a % b) === 0) {
-                lcf = b
-                break
-            }
-            if ((b = b % a) === 0) {
-                lcf = a
-                break
-            }
-        }
-        return lcf
+<script>
+    function sqrt(n) {
+        var x = 2
+        x = x - (x * x - n) / (2 * x)
+        x = x - (x * x - n) / (2 * x)
+        x = x - (x * x - n) / (2 * x)
+        x = x - (x * x - n) / (2 * x)
+        return x
     }
-
-    lcm = (a * b) / islcf(a,b)
-    alert(islcf(a,b))
-    alert(lcm)
+    var n=Number(prompt())
+    alert(sqrt(n).toFixed(3))
 </script>
