--- a/miao/lodash/compact.html
+++ b/miao/lodash/compact.html
@@ -1,15 +1,14 @@
 <script>
     var compact = function (array) {
         var result = []
-        for (let i = 0, j = 0; i < array.length; i++) {
+        for (let i = 0; i < array.length; i++) {
             var num = array[i]
-            if (num != false && num != "" && num != 0 && num != undefined && num != undefined) {
-                result[j] = num
-                j++
+            if (Boolean(num)) {
+                result.push(num) 
             }
         }
         return result
     }
-    var array = [0, 1, false, 2, '', 3]
+    var array = [1, null]
     console.log(compact(array))
 </script>
