lodash identity：返回第一个参数

--- a/miao/lodash/reduce.html
+++ b/miao/lodash/reduce.html
@@ -1,39 +1,20 @@
 <script>
     function reduce(collection, fun, initialval) {
-
-        // if (Array.isArray(collection)) {
-            if (arguments.length === 2) {
-                initialval = 0
-            }
-            for (var i in collection) {
-                initialval = fun(initialval, collection[i],i)
-            }
-        // }
-        //  else {
-        //     for (var j in collection) {
-        //         if (arguments.length === 2) {
-        //             initialval = {}
-        //         }
-        //         initialval = fun(initialval, collection[j], j)
-        //     }
-
-        // }
+        //如果参数只有两个，把最后一个参数赋值为0
+        if (arguments.length === 2) {
+            initialval = 0
+        }
+        //遍历collection 然后给默认值赋值为传入方法的返回值 把参数都传进去
+        for (var i in collection) {
+            initialval = fun(initialval, collection[i], i)
+        }
         return initialval
     }
     debugger
-    // 输入：reduce({ "a": 1, "b": 2, "c": 1 }, "function(result,  value,  key)  {  \n        (result[value]  ||  (result[value]  =   [])).push(key);  \n        return  result;\n      }", {})
-    // 输出：{ }
-    // 期望：{ "1": ["a", "c"], "2": ["b"] }
+
     var a = reduce({ "a": 1, "b": 2, "c": 1 }, function (result, value, key) {
         (result[value] || (result[value] = [])).push(key);
         return result;
     }, {})
-   // var a = reduce([1, 2, 3, 4, 5, 6, 7], function (a, b) { return a + b })
     console.log(a);
-
-
-    // var a = function (result, value, key) {
-    //     (result[value] || (result[value] = [])).push(key);
-    //     return result;
-    // }
 </script>
