--- a/miao/lodash/identity.html
+++ b/miao/lodash/identity.html
@@ -3,6 +3,6 @@
     var identity = function (...args) {
         return args[0]
     }
-    console.log(identity(1,{ a: 1 }));
+    console.log(identity([1,2,3]));
 
 </script>
