--- a/miao/lodash/every.html
+++ b/miao/lodash/every.html
@@ -1,15 +1,15 @@
 <script>
     //通过 predicate（断言函数） 检查 collection（集合）中的 所有 元素是否都返回真值。一旦 predicate（断言函数） 返回假值，迭代就马上停止。predicate（断言函数）调用三个参数： (value, index|key, collection)。 
-    var every = function (collection, fun) {
+    var every = function (collection, predicate) {
         for (var i in collection) {
-            if (!fun) {
+            if (!predicate(collection[i], i, collection)) {
                 return false
             }
         }
         return true
     }
     debugger
-    var a = every([true, 1, null, "yes"],Boolean())
+    var a = every([true, 1, null, "yes"], Boolean())
     console.log(a);
-    
+
 </script>
