--- a/miao/lodash/every.html
+++ b/miao/lodash/every.html
@@ -7,6 +7,9 @@
             }
         }
         return true
+        // return collection.reduce((result, item, val, collection) => {
+        //     return result && predicate(item, val, collection)
+        // }, true)
     }
     debugger
     var a = every([true, 1, null, "yes"], Boolean())
