--- a/miao/lodash/difference.html
+++ b/miao/lodash/difference.html
@@ -1,16 +1,14 @@
 <script>
-    var difference = function (array, ...args) {
-        var i = 0
-        while (i < args.length) {
-            for (let j = 0; j < args[i].length; j++) {
-                for (args[i][j] in array) {
-                    array.slice(i,1)
-                }
+    var difference = function (array, value) {
+        var temp = []
+        for (let i = 0, j = 0; i < array.length; i++) {
+            if (value.indexOf(array[i])==-1) {
+                temp[j] = array[i]
+                j++
             }
-            j = 0
-            i++
         }
-        return args
+        array = temp
+        return array
     }
     debugger
     console.log(difference([2, 1], [2, 3]));
